# maglev

./: duplo.scad  honeycomb.scad  maglev.scad  maglev_duplo.scad  plugs.scad
code/tutorial/: Cargo.toml
code/tutorial/src/: aggregator.rs  distance.rs  lib.rs  main.rs  measurer.rs  status_display.rs  utils.rs  visualize_status.rs  zero_borg.rs
code/tutorial/src/devices/: distance_sensor.rs  hall_sensor.rs  mod.rs  status_display.rs  zero_borg.rs
lib/: duplo-block-lib.scad
modelling/: LinearMotor.md  RailGuide.md
modelling/E1/: E1_Hallbach.md
modelling/E1/models/: nnss_dense.FL2  nnss_dense.VMG  ns_dense.FL2  ns_dense.VMG
modelling/E10/: E10_Form.md
modelling/E10/models/: form.FL2  (+1 more)
modelling/E2/: E2_IronSheet.md
modelling/E3/: E3_Spacing.md
modelling/E4/: E4_Orientation.md
modelling/E9/: E9_RailGuide.md
renderings/: duplo_bottom_4_4_v1.stl  duplo_bottom_4_4_v2.stl  duplo_bottom_4_4_v3.stl  duplo_bottom_4_high_v1.stl  duplo_bottom_4_low_v1.stl  duplo_bottom_4_low_v2.stl  duplo_plate_v1.stl  duplo_vert_vert2x4_v1.stl  levitation_box_v1.stl  levitation_box_v2.stl  levitation_box_v3.stl  levitation_box_v4.stl  levitation_box_v5.stl  levitation_box_v6.stl  levitation_solenoid_v1.stl  levitation_solenoid_v2.stl  levitation_solenoid_v3.stl  levitation_solenoid_v5.stl  levitation_solenoid_v6.stl  levitation_top_v2.stl  levitation_top_v3.stl  levitation_top_v4.stl  levitation_top_v5.stl  maglev_top_2x2_v1.stl  magnet_pits_v1.stl  magnet_pits_v2.stl  plug_v1.stl  plug_v2.stl  rail_v1.stl  rail_v2.stl  railholder_a_v1.stl  solenoid_v1.stl  solenoid_v2.stl
(+18 files in other folders)
